# stdecor

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml
demos/: build-all.sh  demo-ping.py
src/: cli.rs  decor.rs  decor_async.rs  lib.rs  pipe.rs  runner.rs  writer_async.rs
tests/: integration.rs  stdecor_tests.rs
