[package]
name = "stdecor"
description = "Run a command with a decorated stdout/stderr"
version = "0.1.4"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/stdecor"
repository = "https://github.com/lpenz/stdecor"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["command-line"]

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "tracing-log"] }
terminal_size = "0.2.6"
polling = "2.8.0"
memchr = "2.5.0"

[dependencies.chrono]
version = "0.4.26"
default-features = false
features = ["clock"]

[build-dependencies]
color-eyre = "0.6.2"
man = "0.3.0"

[package.metadata.deb]
section = "utils"
extended-description = """\
stdecor runs a command with a decorated stdout/stderr
"""
assets = [
    ["target/release/stdecor.1", "usr/share/man/man1/", "644"],
    ["target/release/stdecor", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/stdecor/", "644"],
    ["AUTHORS", "usr/share/doc/stdecor/", "644"],
    ["README.md", "usr/share/doc/stdecor/", "644"],
]
