[package]
name = "stdecor"
description = "Run a command with a decorated stdout/stderr"
version = "0.1.14"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/stdecor"
repository = "https://github.com/lpenz/stdecor"
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["command-line"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log"] }
terminal_size = "0.4.2"
polling = "3.8.0"
memchr = "2.7.5"
lineriver = "0.7.1"

[dependencies.chrono]
version = "0.4.41"
default-features = false
features = ["clock"]

[build-dependencies]
color-eyre = "0.6.5"
man = "0.3.0"

[package.metadata.deb]
section = "utils"
extended-description = """\
stdecor runs a command with a decorated stdout/stderr
"""
assets = [
    ["target/release/stdecor.1", "usr/share/man/man1/", "644"],
    ["target/release/stdecor", "usr/bin/", "755"],
    ["LICENSE", "usr/share/doc/stdecor/", "644"],
    ["AUTHORS", "usr/share/doc/stdecor/", "644"],
    ["README.md", "usr/share/doc/stdecor/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/stdecor.1", dest = "/usr/share/man/man1/", mode = "644" },
    { source = "target/release/stdecor", dest = "/usr/bin/", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/stdecor/", mode = "644" },
    { source = "AUTHORS", dest = "/usr/share/doc/stdecor/", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/stdecor/", mode = "644" },
]
